work in progress

--- a/dump.html
+++ b/dump.html
@@ -60,96 +60,60 @@
           <img src="./pictures/plant.png" alt="plant">
         </div>
     </div>
+    <div class="second-header">
+      <span class="headings">Categories</span>
+      <div class="sidebar">
+        <ul>
+          <li class="sidebar-list active">House Plants</li>
+          <li class="sidebar-list">Potter Plants</li>
+          <li class="sidebar-list">Seeds</li>
+          <li class="sidebar-list">Small Plants</li>
+          <li class="sidebar-list">Big Plants</li>
+          <li class="sidebar-list">Succulents</li>
+          <li class="sidebar-list">Trerrariums</li>
+          <li class="sidebar-list">Gardening</li>
+          <li class="sidebar-list">Accessories</li>
+        </ul>
+        <div class="countblock">
+          <ul>
+            <li class="category-count active">(33)</li>
+            <li class="category-count">(12)</li>
+            <li class="category-count">(65)</li>
+            <li class="category-count">(39)</li>
+            <li class="category-count">(23)</li>
+            <li class="category-count">(17)</li>
+            <li class="category-count">(19)</li>
+            <li class="category-count">(13)</li>
+            <li class="category-count">(38)</li>
+          </ul>
+        </div>
+      </div>
+        <span class="headings">Price Range</span>
+        <!-- <input class="money-range" type="range" min="39" max="1230"> -->
+        <span class="price">Price: <span class="price2">$39 - $1230</span></span>
+        <button class="filter-button">Filter</button>
+        <div class="sizes">
+          <div class="sizeblock">
+            <p class="headings">Size</p>
+            <ul>
+              <li class="sidebar-list">Small</li>
+              <li class="sidebar-list">Medium</li>
+              <li class="sidebar-list">Large</li>
+            </ul>
+          </div>
+          <div class="countblock">
+            <ul>
+              <li class="category-count">(119)</li>
+              <li class="category-count">(86)</li>
+              <li class="category-count">(78)</li>
+            </ul>
+          </div>
+        </sizes>
+        <!-- <div class="sorting">
+          <ul class="sorting-item active">All Plants</ul>
+          <ul class="sorting-item">New Arrivals</ul>
+          <ul class="sorting-item">Sale</ul>
+        </div> -->
+    </div>
 </body>
 </html>
-<div class="sidebar">
-  <div class="sidebar-top">
-    <span class="heading">Categories</span>
-    <ul class="categories">
-      <li class="category-item">
-        <span class="category-name active">House Plants</span>
-        <span class="category-count active">(33)</span>
-      </li>
-      <li class="category-item">
-        <span class="category-name">Potter Plants</span>
-        <span class="category-count">(12)</span>
-      </li>
-      <li class="category-item">
-        <span class="category-name">Seeds</span>
-        <span class="category-count">(65)</span>
-      </li>
-      <li class="category-item">
-        <span class="category-name">Small Plants</span>
-        <span class="category-count">(39)</span>
-      </li>
-      <li class="category-item">
-        <span class="category-name">Big Plants</span>
-        <span class="category-count">(23)</span>
-      </li>
-      <li class="category-item">
-        <span class="category-name">Succulents</span>
-        <span class="category-count">(17)</span>
-      </li>
-      <li class="category-item">
-        <span class="category-name">Trerrariums</span>
-        <span class="category-count">(19)</span>
-      </li>
-      <li class="category-item">
-        <span class="category-name">Gardening</span>
-        <span class="category-count">(13)</span>
-      </li>
-      <li class="category-item">
-        <span class="category-name">Accessories</span>
-        <span class="category-count">(18)</span>
-      </li>
-    </ul>
-    <div class="price-block">
-      <span class="heading">Price Range</span>
-      <input class="money-range" type="range" min="39" max="1230">
-      <span class="price">Price: <span class="price2">$39 - $1230</span></span>
-      <button class="filter-button">Filter</button>
-    </div>
-    <span class="heading">Size</span>
-    <li class="category-item">
-      <span class="category-name">Small</span>
-      <span class="category-count">(119)</span>
-    </li>
-    <li class="category-item">
-      <span class="category-name">Medium</span>
-      <span class="category-count">(86)</span>
-    </li>
-    <li class="category-item">
-      <span class="category-name">Large</span>
-      <span class="category-count">(78)</span>
-    </li>
-    <div class="banner-rectangle">
-      <span class="super-sale">Super Sale</span>
-      <span class="discount">UP TO 75% OFF</span>
-      <img src="./pictures/discount-plant.png" alt="discount-plant">
-    </div>
-  </div>
-    <div class="wrapper">
-      <div class="shop-header">
-          <li class="header-item active">All Plants</li>
-          <li class="header-item">New Arrivals</li>
-          <li class="header-item">Sale</li>
-          <li class="sorting">Short by:
-             <select name="" id="">
-              <option value="default">Default sorting</option>
-              <option value="popularity">Sort by popularity</option>
-              <option value="lowprice">Price: low to high</option>
-              <option value="highprice">Price: high to low</option>
-              <option value="latest">Sort by latest</option>
-            </select>
-          </li>
-      </div>
-    </div>
-    <div class="goods">
-      <div class="good1">
-        <img src="./pictures/goods/image 1.png" alt="">
-        <span class="name">Barberton Daisy</span>
-        <span class="price">$119.00</span>
-      </div>
-    </div>
-  </div>
-</div>
