--- a/testificate/test.html
+++ b/testificate/test.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="./test.css">
 </head>
 <body>
-  <div class="preloader"></div>
+  <!-- <div class="preloader"></div> -->
+   <input type="checkbox">
+    <label for="checkbox">Toggle</label>
 </body>
 </html>
