--- a/testificate/test.html
+++ b/testificate/test.html
@@ -10,7 +10,7 @@
   <div class="rectangle-base">
     <div class="bottom-rectangle"></div>
     <div class="header">
-      <svg>
+      <svg class="icon" width="24" height="24" viewBox="0 0 24 24">
         <use xlink:href="../docs/pictures/sprite.svg#close-button"></use>
       </svg>
       <span class="login-text">Login</span>
